--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cross-env": "^7.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^8.3.2"
   },
   "overrides": {
     "multer": {
