Updated example config files

--- a/.env.stage.dev
+++ b/.env.stage.dev
@@ -1,3 +1,3 @@
-BLOGS_PATH=data/blogs.json
-USERS_PATH=data/users.json
+BLOGS_PATH=./data/blogs.json
+USERS_PATH=./data/users.json
 JWT_SECRET=superSecret123
